--- a/index.html
+++ b/index.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=[device-width], initial-scale=1.0">
-    <title>Aragão Nutri</title>
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Arthur Aragão</title>
+
+    <link rel="stylesheet" href="recursos/style.css">
 </head>
 <body>
-    
+    <section class="head">
+        <div class="slide">
+            <img class="banner" src="imagens/foto_banner.png" alt="">
+            <div class="head-titulos">
+                <h1 class="texto-primario">Art</h1>
+                <h2 class="texto-secundario"></h2>
+            </div>
+        </div>
+        <div class="slide">
+            <div class="head-titulos">
+                <h1 class="texto-primario"></h1>
+                <h2 class="texto-secundario"></h2>
+            </div>
+            <img class="banner" src="imagens/foto_banner_2.png" alt="">
+        </div>
+    </section>
 </body>
+<script src="recursos/script.js" type="module"></script>
 </html>
