--- a/index.html
+++ b/index.html
@@ -12,16 +12,59 @@
         <div class="slide">
             <img class="banner" src="imagens/foto_banner.png" alt="">
             <div class="head-titulos">
-                <h1 class="texto-primario">Art</h1>
-                <h2 class="texto-secundario"></h2>
+                <h1 class="texto-primario">Arthur Aragão</h1>
+                <h2 class="texto-secundario">Seu consultor nutricional</h2>
             </div>
         </div>
+
         <div class="slide">
             <div class="head-titulos">
-                <h1 class="texto-primario"></h1>
-                <h2 class="texto-secundario"></h2>
+                <h1 class="texto-primario">Quem sou?</h1>
+                <h2 class="texto-secundario">
+                    Prazer, tenho 22 anos e sou nutricionista formado pela Universidade de Fortaleza. <br>
+                    Sou apaixonado por saúde e movimento. <br>
+                    Pratico esportes desde criança, mas foi o basquete que me abriu portas importantes, garantindo bolsas na escola e na faculdade. <br>
+                </h2> 
             </div>
             <img class="banner" src="imagens/foto_banner_2.png" alt="">
+        </div>
+        
+        <div class="slide">
+            <div class="head-titulos">
+                <h1 class="texto-primario">Quem sou?</h1>
+                <h2 class="texto-secundario">
+                    Durante a infância e adolescência, vivi a obesidade de perto, o que marcou profundamente
+                    minha relação com a saúde. Minha história de superação é a prova de que uma alimentação
+                    saudável e a prática de exercícios físicos são ferramentas capazes de promover uma mudança
+                    de vida completa. A nutrição entrou na minha vida primeiro como ferramenta — e hoje é
+                    propósito.
+                </h2> 
+            </div>
+            <img class="banner" src="imagens/foto_banner_3.png" alt="">
+        </div>
+        
+        <div class="slide">
+            <div class="head-titulos">
+                <h1 class="texto-primario">Esporte e abordagem</h1>
+                <h2 class="texto-secundario">
+                    Atualmente sou praticante de jiu-jitsu, modalidade que me ensina valores essenciais como
+                    disciplina, respeito e superação. Acredito em uma abordagem sem neura e sem extremismos,
+                    ajudando pessoas a se sentirem melhor com o próprio corpo.
+                </h2> 
+            </div>
+            <img class="banner" src="imagens/foto_banner_4.png" alt="">
+        </div>
+
+        <div class="slide">
+            <img class="banner" src="imagens/foto_banner.png" alt="">
+            <div class="head-titulos">
+                <h1 class="texto-primario">Minha missão</h1>
+                <h2 class="texto-secundario">
+                    Minha missão é acompanhar pessoas na reconquista da sua saúde e autoestima, utilizando a
+                    nutrição e o esporte como ferramentas para uma vida mais ativa e feliz.
+                    Para mim, cuidar da alimentação é um processo — e não algo temporário.
+                </h2> 
+            </div>
         </div>
     </section>
 </body>
