--- a/index.html
+++ b/index.html
@@ -6,24 +6,25 @@
     <title>Arthur Aragão</title>
 
     <link rel="stylesheet" href="recursos/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 </head>
 <body>
     <section class="head">
         <div class="slide">
             <img class="banner" src="imagens/foto_banner.png" alt="">
             <div class="head-titulos">
-                <h1 class="texto-primario">Arthur Aragão</h1>
-                <h2 class="texto-secundario">Seu consultor nutricional</h2>
+                <h1 class="texto-primario texto-invertido">Arthur Aragão</h1>
+                <h2 class="texto-secundario texto-invertido">Nutrição Clínica e Esportiva</h2>
             </div>
         </div>
 
         <div class="slide">
             <div class="head-titulos">
-                <h1 class="texto-primario">Quem sou?</h1>
+                <h1 class="texto-primario">Minha Base</h1>
                 <h2 class="texto-secundario">
-                    Prazer, tenho 22 anos e sou nutricionista formado pela Universidade de Fortaleza. <br>
-                    Sou apaixonado por saúde e movimento. <br>
-                    Pratico esportes desde criança, mas foi o basquete que me abriu portas importantes, garantindo bolsas na escola e na faculdade. <br>
+                    Nutricionista formado pela Unifor e apaixonado pelo movimento. <br>
+                    O esporte moldou meu caráter: como ex-atleta bolsista de basquete,
+                    aprendi cedo que disciplina e saúde são inseparáveis.
                 </h2> 
             </div>
             <img class="banner" src="imagens/foto_banner_2.png" alt="">
@@ -31,41 +32,48 @@
         
         <div class="slide">
             <div class="head-titulos">
-                <h1 class="texto-primario">Quem sou?</h1>
+                <h1 class="texto-primario">Minha Jornada</h1>
                 <h2 class="texto-secundario">
-                    Durante a infância e adolescência, vivi a obesidade de perto, o que marcou profundamente
-                    minha relação com a saúde. Minha história de superação é a prova de que uma alimentação
-                    saudável e a prática de exercícios físicos são ferramentas capazes de promover uma mudança
-                    de vida completa. A nutrição entrou na minha vida primeiro como ferramenta — e hoje é
-                    propósito.
-                </h2> 
+                    Venci a obesidade na juventude e senti na pele o poder transformador 
+                    da mudança de hábitos. A nutrição entrou na minha vida como uma 
+                    ferramenta de cura pessoal e hoje se consolidou como meu propósito profissional.                </h2> 
             </div>
-            <img class="banner" src="imagens/foto_banner_3.png" alt="">
+            <img class="banner" src="imagens/foto_banner_4.png" alt="">
         </div>
         
         <div class="slide">
             <div class="head-titulos">
-                <h1 class="texto-primario">Esporte e abordagem</h1>
+                <h1 class="texto-primario">Abordagem</h1>
                 <h2 class="texto-secundario">
-                    Atualmente sou praticante de jiu-jitsu, modalidade que me ensina valores essenciais como
-                    disciplina, respeito e superação. Acredito em uma abordagem sem neura e sem extremismos,
-                    ajudando pessoas a se sentirem melhor com o próprio corpo.
+                    Hoje, pratico Jiu-Jitsu e aplico no consultório a mesma resiliência do tatame. 
+                    Defendo uma nutrição humanizada e livre de extremismos, focada em 
+                    resultados consistentes e na sua paz com o espelho.
                 </h2> 
             </div>
-            <img class="banner" src="imagens/foto_banner_4.png" alt="">
+            <img class="banner" src="imagens/foto_banner_3.png" alt="">
         </div>
 
         <div class="slide">
             <img class="banner" src="imagens/foto_banner.png" alt="">
             <div class="head-titulos">
-                <h1 class="texto-primario">Minha missão</h1>
-                <h2 class="texto-secundario">
-                    Minha missão é acompanhar pessoas na reconquista da sua saúde e autoestima, utilizando a
-                    nutrição e o esporte como ferramentas para uma vida mais ativa e feliz.
-                    Para mim, cuidar da alimentação é um processo — e não algo temporário.
-                </h2> 
+                <h1 class="texto-primario texto-invertido">Minha missão</h1>
+                <h2 class="texto-secundario texto-invertido">
+                    Quero resgatar sua autoestima e vitalidade. 
+                    Acredito que cuidar da alimentação não é uma fase temporária, 
+                    mas a construção contínua de uma vida ativa, longeva e feliz.                </h2> 
             </div>
         </div>
+    </section>
+
+    <section class="consultas">
+        <h1 class="title">Consultas</h1>
+        <p class="subtitle">Descubra a melhor forma pra você</p>
+
+        <div class="links-container">
+            <a href="" class="link"><i class="fa-solid fa-desktop fa-2x"></i>On-line</a>
+            <a href="" class="link"><i class="fa-solid fa-user-group fa-2x"></i>Presencial</a>
+        </div>
+
     </section>
 </body>
 <script src="recursos/script.js" type="module"></script>
