--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arthur Aragão</title>
+    <link rel="icon" href="./imagens/logo_icone.png">
 
     <link rel="stylesheet" href="recursos/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 </head>
 <body>
+    <div class="icon-container">
+        <img src="./imagens/logo_icone.png" alt="" class="icon-logo">
+        <img src="./imagens/logo_nome.png" alt="" class="icon-nome">
+    </div>
     <section class="head">
-        <div class="slide">
+        <div class="slide-fixo"></div>
+
+        <div class="slide right">
             <img class="banner" src="imagens/foto_banner.png" alt="">
             <div class="head-titulos">
                 <h1 class="texto-primario texto-invertido">Arthur Aragão</h1>
@@ -18,7 +25,7 @@
             </div>
         </div>
 
-        <div class="slide">
+        <div class="slide left">
             <div class="head-titulos">
                 <h1 class="texto-primario">Minha Base</h1>
                 <h2 class="texto-secundario">
@@ -32,7 +39,7 @@
         
         <div class="slide">
             <div class="head-titulos">
-                <h1 class="texto-primario">Minha Jornada</h1>
+                <h1 class="texto-primario">Meu caminho</h1>
                 <h2 class="texto-secundario">
                     Venci a obesidade na juventude e senti na pele o poder transformador 
                     da mudança de hábitos. A nutrição entrou na minha vida como uma 
