estruturar sessão consulta

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <img src="./imagens/logo_icone.png" alt="" class="icon-logo">
         <img src="./imagens/logo_nome.png" alt="" class="icon-nome">
     </div>
+
     <section class="head">
         <div class="slide-fixo"></div>
 
@@ -73,12 +74,41 @@
     </section>
 
     <section class="consultas">
-        <h1 class="title">Consultas</h1>
-        <p class="subtitle">Descubra a melhor forma pra você</p>
+        <h1 class="title">Atendimento</h1>
+        <p class="subtitle">Como funciona meu atendimento?</p>
 
-        <div class="links-container">
-            <a href="" class="link"><i class="fa-solid fa-desktop fa-2x"></i>On-line</a>
-            <a href="" class="link"><i class="fa-solid fa-user-group fa-2x"></i>Presencial</a>
+        <h2 class="topic">Acompanhamento nutricional</h2>
+
+        <div class="planos-container">
+            <div class="plano-container">
+                <h2 class="plano-titulo">45 dias</h2>
+                <ul class="plano-lista">
+                    <li class="plano-item">Consulta</li>
+                    <li class="plano-item">Acompanhamento</li>
+                    <li class="plano-item">Ajustes contínuo no plano alimentar</li>
+                    <li class="plano-item">suporte durante todo o plano</li>
+                </ul>
+            </div>
+
+            <div class="pip2-linha"></div>
+
+            <div class="p2-container">
+                <h2 class="p2-titulo">90 dias</h2>
+                <ul class="p2-lista">
+                    <li class="p2-item">Consulta</li>
+                    <li class="p2-item">Retorno</li>
+                    <li class="p2-item">Acompanhamento</li>
+                    <li class="p2-item">Ajustes contínuo no plano alimentar</li>
+                    <li class="p2-item">suporte durante todo o plano</li>
+                </ul>
+            </div>
+        </div>
+
+        <h2 class="topic">Modelos de consulta</h2>
+
+        <div class="modelos-container">
+            <div class="modelos"><i class="fa-solid fa-desktop fa-2x"></i>On-line</div>
+            <div class="modelos"><i class="fa-solid fa-user-group fa-2x"></i>Presencial</div>
         </div>
 
     </section>
