--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
 
         <div class="planos-container">
             <div class="plano-container">
-                <h2 class="plano-titulo">45 dias</h2>
-                <ul class="plano-lista">
+                <h2 class="plano-titulo"> Plano 45 dias</h2>
+                <ul class="plano-lista" style="padding-right: 1rem; padding-left: 1rem;">
                     <li class="plano-item">Consulta</li>
                     <li class="plano-item">Acompanhamento</li>
                     <li class="plano-item">Ajustes contínuo no plano alimentar</li>
@@ -90,16 +90,16 @@
                 </ul>
             </div>
 
-            <div class="pip2-linha"></div>
+            <div class="plano-linha"></div>
 
-            <div class="p2-container">
-                <h2 class="p2-titulo">90 dias</h2>
-                <ul class="p2-lista">
-                    <li class="p2-item">Consulta</li>
-                    <li class="p2-item">Retorno</li>
-                    <li class="p2-item">Acompanhamento</li>
-                    <li class="p2-item">Ajustes contínuo no plano alimentar</li>
-                    <li class="p2-item">suporte durante todo o plano</li>
+            <div class="plano-container">
+                <h2 class="plano-titulo">Plano 3 mêses</h2>
+                <ul class="plano-lista" style="padding-left: 1.6rem;">
+                    <li class="plano-item">Consulta</li>
+                    <li class="plano-item">Retorno</li>
+                    <li class="plano-item">Acompanhamento</li>
+                    <li class="plano-item">Ajustes contínuo no plano alimentar</li>
+                    <li class="plano-item">suporte durante todo o plano</li>
                 </ul>
             </div>
         </div>
