--- a/index.html
+++ b/index.html
@@ -75,42 +75,60 @@
 
     <section class="consultas">
         <h1 class="title">Atendimento</h1>
-        <p class="subtitle">Como funciona meu atendimento?</p>
+        <p class="subtitle">Escolha a estratégia ideal para o seu objetivo</p>
 
-        <h2 class="topic">Acompanhamento nutricional</h2>
-
+        <h2 class="topic">Acompanhamento Nutricional</h2>
         <div class="planos-container">
             <div class="plano-container">
-                <h2 class="plano-titulo"> Plano 45 dias</h2>
-                <ul class="plano-lista" style="padding-right: 1rem; padding-left: 1rem;">
-                    <li class="plano-item">Consulta</li>
-                    <li class="plano-item">Acompanhamento</li>
-                    <li class="plano-item">Ajustes contínuo no plano alimentar</li>
-                    <li class="plano-item">suporte durante todo o plano</li>
+                <h3 class="plano-titulo">45 Dias</h3>
+                <ul class="plano-lista">
+                    <li><i class="fa-solid fa-check"></i> Consulta</li>
+                    <li><i class="fa-solid fa-check"></i> Acompanhamento</li>
+                    <li><i class="fa-solid fa-check"></i> Ajustes contínuos no plano</li>
+                    <li><i class="fa-solid fa-check"></i> Suporte durante todo o plano</li>
                 </ul>
             </div>
-
-            <div class="plano-linha"></div>
 
             <div class="plano-container">
-                <h2 class="plano-titulo">Plano 3 mêses</h2>
-                <ul class="plano-lista" style="padding-left: 1.6rem;">
-                    <li class="plano-item">Consulta</li>
-                    <li class="plano-item">Retorno</li>
-                    <li class="plano-item">Acompanhamento</li>
-                    <li class="plano-item">Ajustes contínuo no plano alimentar</li>
-                    <li class="plano-item">suporte durante todo o plano</li>
+                <h3 class="plano-titulo">3 Meses</h3>
+                <ul class="plano-lista">
+                    <li><i class="fa-solid fa-check"></i> Consulta</li>
+                    <li><i class="fa-solid fa-check"></i> Retorno</li>
+                    <li><i class="fa-solid fa-check"></i> Acompanhamento</li>
+                    <li><i class="fa-solid fa-check"></i> Ajustes contínuos no plano</li>
+                    <li><i class="fa-solid fa-check"></i> Suporte durante todo o plano</li>
                 </ul>
             </div>
         </div>
 
-        <h2 class="topic">Modelos de consulta</h2>
-
+        <h2 class="topic">Modelos de Consulta</h2>
         <div class="modelos-container">
-            <div class="modelos"><i class="fa-solid fa-desktop fa-2x"></i>On-line</div>
-            <div class="modelos"><i class="fa-solid fa-user-group fa-2x"></i>Presencial</div>
+            <div class="modelo-item">
+                <i class="fa-solid fa-desktop fa-2x"></i>
+                <span>On-line</span>
+            </div>
+            <div class="modelo-item">
+                <i class="fa-solid fa-user-group fa-2x"></i>
+                <span>Presencial</span>
+            </div>
         </div>
 
+        <h2 class="topic">Mais informações</h2>
+        <div class="info-container">
+            <button class="info-item">
+                <i class="fa-solid fa-list-check fa-2x"></i>
+                <span>Etapas da consulta</span>
+            </button>
+
+            <button class="info-item">
+                <i class="fa-solid fa-location-dot fa-2x"></i>
+                <span>Localização presencial</span>
+            </button>
+        </div>
+
+        <div class="info-ocult-container">
+            
+        </div>
     </section>
 </body>
 <script src="recursos/script.js" type="module"></script>
