--- a/index.html
+++ b/index.html
@@ -115,20 +115,36 @@
 
         <h2 class="topic">Mais informações</h2>
         <div class="info-container">
-            <button class="info-item">
+            <button id="btn-etapas" class="info-item">
                 <i class="fa-solid fa-list-check fa-2x"></i>
                 <span>Etapas da consulta</span>
             </button>
 
-            <button class="info-item">
+            <button id="btn-localizacao" class="info-item">
                 <i class="fa-solid fa-location-dot fa-2x"></i>
                 <span>Localização presencial</span>
             </button>
         </div>
 
-        <div class="info-ocult-container">
-            
+        <div class="oculto-container">
+            <div id="etapas" class="etapas-container">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, sed cum atque unde dolorum quo repudiandae quod dolores sequi ipsa aliquam accusantium culpa adipisci odit itaque, cupiditate molestiae? Deserunt, impedit?
+            </div>
+
+            <div id="localizacao" class="localizacao-container">
+                <iframe 
+                    class="mapa-google"
+                    src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3981.5857981250924!2d-40.323917926771216!3d-3.681308642930763!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zM8KwNDAnNTIuNyJTIDQwwrAxOScxNi44Ilc!5e0!3m2!1spt-BR!2sus!4v1768412528012!5m2!1spt-BR!2sus" 
+                    allowfullscreen="" 
+                    loading="lazy" 
+                    referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
+            </div>
         </div>
+    </section>
+
+    <section class="Agendamento">
+        
     </section>
 </body>
 <script src="recursos/script.js" type="module"></script>
