--- a/index.html
+++ b/index.html
@@ -192,7 +192,6 @@
                         <button type="button" class="chip" data-value="Qua">Qua</button>
                         <button type="button" class="chip" data-value="Qui">Qui</button>
                         <button type="button" class="chip" data-value="Sex">Sex</button>
-                        <button type="button" class="chip" data-value="Sab">Sáb</button>
                     </div>
                 </div>
 
@@ -211,7 +210,51 @@
                 </button>
             </form>
         </div>
-</section>
+    </section>
+
+    <footer class="rodape">
+        <div class="rodape-container">
+            
+            <div class="rodape-col">
+                <h3 class="rodape-logo">Arthur Aragão</h3>
+                <p class="crn">Nutricionista | CRN-6 00000</p>
+                <p class="rodape-desc">
+                    Transformando vidas através da nutrição esportiva e clínica. 
+                    Saúde, performance e bem-estar sem extremismos.
+                </p>
+            </div>
+
+            <div class="rodape-col">
+                <h4>Navegação</h4>
+                <ul class="rodape-links">
+                    <li><a href="#inicio">Início</a></li>
+                    <li><a href="#sobre">Sobre Mim</a></li>
+                    <li><a href="#planos">Planos</a></li>
+                    <li><a href="#contato">Agendar Consulta</a></li>
+                </ul>
+            </div>
+
+            <div class="rodape-col">
+                <h4>Contato</h4>
+                <ul class="rodape-contato">
+                    <li><i class="fa-brands fa-whatsapp"></i> (85) 99999-9999</li>
+                    <li><i class="fa-regular fa-envelope"></i> contato@arthurnutri.com.br</li>
+                    <li><i class="fa-solid fa-location-dot"></i> Fortaleza, CE</li>
+                </ul>
+            </div>
+
+        </div>
+
+        <div class="rodape-bottom">
+            <p>&copy; 2024 Arthur Aragão. Todos os direitos reservados.</p>
+            <div class="rodape-legal">
+                <a href="/politica-privacidade">Política de Privacidade</a>
+                <span>|</span>
+                <a href="#">Termos de Uso</a>
+            </div>
+            <p class="agencia">Desenvolvido por <strong>SevDesign</strong></p>
+        </div>
+    </footer>
 
 </body>
 <script src="recursos/script.js" type="module"></script>
