--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="slide-fixo"></div>
 
         <div class="slide ">
-            <img class="banner" src="imagens/foto_banner.png" alt="">
+            <img class="banner" src="imagens/foto_banner_1.png" alt="">
             <div class="head-titulos">
                 <h1 class="texto-primario texto-invertido">Arthur Aragão</h1>
                 <h2 class="texto-secundario texto-invertido">Nutrição Clínica e Esportiva</h2>
@@ -46,7 +46,7 @@
                     da mudança de hábitos. A nutrição entrou na minha vida como uma 
                     ferramenta de cura pessoal e hoje se consolidou como meu propósito profissional.                </h2> 
             </div>
-            <img class="banner" src="imagens/foto_banner_4.png" alt="">
+            <img class="banner" src="imagens/foto_banner_3.png" alt="">
         </div>
         
         <div class="slide ">
@@ -58,11 +58,11 @@
                     resultados consistentes e na sua paz com o espelho.
                 </h2> 
             </div>
-            <img class="banner" src="imagens/foto_banner_3.png" alt="">
+            <img class="banner" src="imagens/foto_banner_4.png" alt="">
         </div>
 
         <div class="slide ">
-            <img class="banner" src="imagens/foto_banner.png" alt="">
+            <img class="banner" src="imagens/foto_banner_5.png" alt="">
             <div class="head-titulos">
                 <h1 class="texto-primario texto-invertido">Minha missão</h1>
                 <h2 class="texto-secundario texto-invertido">
@@ -128,20 +128,77 @@
 
         <div class="oculto-container">
             <div id="etapas" class="etapas-container">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, sed cum atque unde dolorum quo repudiandae quod dolores sequi ipsa aliquam accusantium culpa adipisci odit itaque, cupiditate molestiae? Deserunt, impedit?
+
+                <div class="etapa">
+                    <div class="etapa-texto">
+                        <div class="etapa-header">
+                            <span class="numero">01.</span>
+                            <h3 class="titulo">Mapeamento de Rotina</h3>
+                        </div>
+                        <p class="descricao">
+                            Nossa conversa inicial vai além da comida. Analisamos seus hábitos, horários, 
+                            treinos e preferências para entender exatamente como adaptar a dieta à sua realidade, 
+                            e não o contrário.
+                        </p>
+                    </div>
+                    <img class="etapa-img" src="imagens/foto_etapa_1.png" alt="">
+                </div>
+                
+
+                <div class="etapa">
+                    <div class="etapa-texto">
+                        <div class="etapa-header">
+                            <span class="numero">02.</span>
+                            <h3 class="titulo">Avaliação Corporal</h3>
+                        </div>
+                        <p class="descricao">
+                            Utilizamos adipometria e perimetria para mensurar sua massa muscular e percentual de gordura. 
+                            Esses dados guiam a estratégia para resultados estéticos e de performance visíveis.
+                        </p>
+                    </div>
+                    <img src="imagens/foto_etapa_2.png" alt="Avaliação física com adipômetro" class="etapa-img">
+                </div>
+
+                <div class="etapa">
+                    <div class="etapa-texto">
+                        <div class="etapa-header">
+                            <span class="numero">03.</span>
+                            <h3 class="titulo">Plano Personalizado</h3>
+                        </div>
+                        <p class="descricao">
+                            Você recebe uma estratégia nutricional feita sob medida para o seu objetivo, 
+                            respeitando o que você gosta de comer e a logística do seu dia a dia. 
+                            Nada de dietas de gaveta.
+                        </p>
+                    </div>
+                    <img src="imagens/foto_etapa_3.png" alt="Entrega do plano alimentar" class="etapa-img">
+                </div>
+
+                <div class="etapa">
+                    <div class="etapa-texto">
+                        <div class="etapa-header">
+                            <span class="numero">04.</span>
+                            <h3 class="titulo">App e Suporte</h3>
+                        </div>
+                        <p class="descricao">
+                            Tenha seu plano e avaliação na palma da mão via aplicativo. Além disso, 
+                            você tem suporte direto para tirar dúvidas e realizar ajustes sempre que necessário.
+                        </p>
+                    </div>
+                    <img src="imagens/foto_etapa_4.png" alt="App com plano alimentar e suporte" class="etapa-img">
+                </div>
             </div>
 
             <div id="localizacao" class="localizacao-container">
                 <iframe 
                     class="mapa-google"
-                    src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3981.5857981250924!2d-40.323917926771216!3d-3.681308642930763!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zM8KwNDAnNTIuNyJTIDQwwrAxOScxNi44Ilc!5e0!3m2!1spt-BR!2sus!4v1768412528012!5m2!1spt-BR!2sus" 
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4810.723909431926!2d-38.49784338867902!3d-3.747132096211023!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7c7489a74ca7747%3A0xa973e5ec723fa253!2sR.%20Prof.%20Dias%20da%20Rocha%2C%202103%20-%20Dion%C3%ADsio%20Torres%2C%20Fortaleza%20-%20CE%2C%2060170-311!5e1!3m2!1spt-BR!2sbr!4v1768530259195!5m2!1spt-BR!2sbr" 
                     allowfullscreen="" 
                     loading="lazy" 
                     referrerpolicy="no-referrer-when-downgrade">
                 </iframe>
 
-                <a href="https://www.google.com/maps/search/?api=1&query=Av.+Washington+Soares,+1321+-+Edson+Queiroz,+Fortaleza+-+CE" 
-                    target="_blank" 
+<a href="https://www.google.com/maps/search/?api=1&query=R.+Prof.+Dias+da+Rocha,+2103+-+Dionísio+Torres,+Fortaleza+-+CE"                    target="_blank" 
                     class="btn-abrir-mapa">
                     <div class="icone-mapa">
                         <i class="fa-solid fa-location-dot"></i>
