--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img src="./imagens/logo_nome.png" alt="" class="icon-nome">
     </div>
 
-    <section class="head">
+    <section class="head" id="sobre">
         <div class="slide-fixo"></div>
 
         <div class="slide ">
@@ -73,7 +73,7 @@
         </div>
     </section>
 
-    <section class="consultas">
+    <section class="consultas" id="planos">
         <h1 class="title">Atendimento</h1>
         <p class="subtitle">Escolha a estratégia ideal para o seu objetivo</p>
 
@@ -236,6 +236,7 @@
                         <button type="button" class="chip" data-value="Emagrecimento">Emagrecimento</button>
                         <button type="button" class="chip" data-value="Hipertrofia">Ganhar Músculo</button>
                         <button type="button" class="chip" data-value="Saúde/Performance">Saúde/Performance</button>
+                        <button type="button" class="chip" data-value="Melhora alimentar">Melhora Alimentar</button>
                         <button type="button" class="chip" data-value="Outro">Outro</button>
                     </div>
                     <input type="hidden" id="objetivo-selecionado">
@@ -256,14 +257,14 @@
                     <label>Melhor horário para você?</label>
                     <div class="chips-container" id="turno-options">
                         <button type="button" class="chip" data-value="Manhã">Manhã</button>
-                        <button type="button" class="chip" data-value="Tarde/Noite">Tarde/Noite</button>
+                        <button type="button" class="chip" data-value="Tarde">Tarde</button>
                     </div>
                     <input type="hidden" id="turno-selecionado">
                 </div>
 
                 <button type="submit" class="btn-whatsapp-final">
                     <i class="fa-brands fa-whatsapp"></i>
-                    Enviar solicitação no WhatsApp
+                    Enviar solicitação
                 </button>
             </form>
         </div>
@@ -284,7 +285,6 @@
             <div class="rodape-col">
                 <h4>Navegação</h4>
                 <ul class="rodape-links">
-                    <li><a href="#inicio">Início</a></li>
                     <li><a href="#sobre">Sobre Mim</a></li>
                     <li><a href="#planos">Planos</a></li>
                     <li><a href="#contato">Agendar Consulta</a></li>
@@ -294,7 +294,7 @@
             <div class="rodape-col">
                 <h4>Contato</h4>
                 <ul class="rodape-contato">
-                    <li><i class="fa-brands fa-whatsapp"></i> (85) 99999-9999</li>
+                    <li><i class="fa-brands fa-whatsapp"></i> (85) 9702-9871</li>
                     <li><i class="fa-regular fa-envelope"></i> contato@arthurnutri.com.br</li>
                     <li><i class="fa-solid fa-location-dot"></i> Fortaleza, CE</li>
                 </ul>
