--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="icon-container">
         <img src="./imagens/logo_icone.png" alt="" class="icon-logo">
-        <img src="./imagens/logo_nome.png" alt="" class="icon-nome">
+        <img src="./imagens/logo_profissao.png" alt="" class="icon-nome">
     </div>
 
     <section class="head" id="sobre">
