--- a/index.html
+++ b/index.html
@@ -137,14 +137,13 @@
                         </div>
                         <p class="descricao">
                             Nossa conversa inicial vai além da comida. Analisamos seus hábitos, horários, 
-                            treinos e preferências para entender exatamente como adaptar a dieta à sua realidade, 
+                            treinos e preferências para entender exatamente como adaptar o plano alimentar à sua realidade, 
                             e não o contrário.
                         </p>
                     </div>
                     <img class="etapa-img" src="imagens/foto_etapa_1.png" alt="">
                 </div>
                 
-
                 <div class="etapa">
                     <div class="etapa-texto">
                         <div class="etapa-header">
@@ -153,7 +152,7 @@
                         </div>
                         <p class="descricao">
                             Utilizamos adipometria e perimetria para mensurar sua massa muscular e percentual de gordura. 
-                            Esses dados guiam a estratégia para resultados estéticos e de performance visíveis.
+                            Esses dados guiam a estratégia para alcançarmos seus objetivos e resultados.
                         </p>
                     </div>
                     <img src="imagens/foto_etapa_2.png" alt="Avaliação física com adipômetro" class="etapa-img">
@@ -198,7 +197,7 @@
                     referrerpolicy="no-referrer-when-downgrade">
                 </iframe>
 
-<a href="https://www.google.com/maps/search/?api=1&query=R.+Prof.+Dias+da+Rocha,+2103+-+Dionísio+Torres,+Fortaleza+-+CE"                    target="_blank" 
+                <a href="https://www.google.com/maps/search/?api=1&query=R.+Prof.+Dias+da+Rocha,+2103+-+Dionísio+Torres,+Fortaleza+-+CE"                    target="_blank" 
                     class="btn-abrir-mapa">
                     <div class="icone-mapa">
                         <i class="fa-solid fa-location-dot"></i>
@@ -234,9 +233,9 @@
                     <label>Qual seu objetivo principal?</label>
                     <div class="chips-container" id="objetivo-options">
                         <button type="button" class="chip" data-value="Emagrecimento">Emagrecimento</button>
-                        <button type="button" class="chip" data-value="Hipertrofia">Ganhar Músculo</button>
+                        <button type="button" class="chip" data-value="Hipertrofia">Hipertrofia</button>
+                        <button type="button" class="chip" data-value="Melhorar Habitos Alimentares">Melhorar Hábitos Alimentares</button>
                         <button type="button" class="chip" data-value="Saúde/Performance">Saúde/Performance</button>
-                        <button type="button" class="chip" data-value="Melhora alimentar">Melhora Alimentar</button>
                         <button type="button" class="chip" data-value="Outro">Outro</button>
                     </div>
                     <input type="hidden" id="objetivo-selecionado">
@@ -295,7 +294,7 @@
                 <h4>Contato</h4>
                 <ul class="rodape-contato">
                     <li><i class="fa-brands fa-whatsapp"></i> (85) 9702-9871</li>
-                    <li><i class="fa-regular fa-envelope"></i> contato@arthurnutri.com.br</li>
+                    <li><i class="fa-regular fa-envelope"></i> aragaonutri@gmail.com</li>
                     <li><i class="fa-solid fa-location-dot"></i> Fortaleza, CE</li>
                 </ul>
             </div>
