--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
     </section>
 
     <section class="consultas" id="planos">
-        <h1 class="title">Atendimento</h1>
-        <p class="subtitle">Escolha a estratégia ideal para o seu objetivo</p>
+        <h1 class="titulo">Atendimento</h1>
+        <p class="subtitulo">Escolha a estratégia ideal para o seu objetivo</p>
 
         <h2 class="topic">Acompanhamento Nutricional</h2>
         <div class="planos-container">
@@ -182,6 +182,9 @@
                         <p class="descricao">
                             Tenha seu plano e avaliação na palma da mão via aplicativo. Além disso, 
                             você tem suporte direto para tirar dúvidas e realizar ajustes sempre que necessário.
+                            <span style="font-weight: bold; font-size: 1.1rem;">
+                                Vamos trilhar esse caminho juntos!
+                            </span>
                         </p>
                     </div>
                     <img src="imagens/foto_etapa_4.png" alt="App com plano alimentar e suporte" class="etapa-img">
