final da produção

--- a/index.html
+++ b/index.html
@@ -307,9 +307,9 @@
         <div class="rodape-bottom">
             <p>&copy; 2024 Arthur Aragão. Todos os direitos reservados.</p>
             <div class="rodape-legal">
-                <a href="/politica-privacidade">Política de Privacidade</a>
+                <a href="pages/politica_termos.html">Política de Privacidade</a>
                 <span>|</span>
-                <a href="#">Termos de Uso</a>
+                <a href="pages/politica_termos.html#termos">Termos de Uso</a>
             </div>
             <p class="agencia">Desenvolvido por <strong>SevDesign</strong></p>
         </div>
