final da produção

--- a/index.html
+++ b/index.html
@@ -252,6 +252,7 @@
                         <button type="button" class="chip" data-value="Qua">Qua</button>
                         <button type="button" class="chip" data-value="Qui">Qui</button>
                         <button type="button" class="chip" data-value="Sex">Sex</button>
+                        <button type="button" class="chip" data-value="Sab">Sab</button>
                     </div>
                 </div>
 
