--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
     <section class="head" id="sobre">
         <div class="slide-fixo"></div>
+        <span id="btn-proximo-slide" class="seta fa-solid fa-arrow-right-to-bracket"></span>
 
         <div class="slide ">
             <img class="banner" src="imagens/foto_banner_1.png" alt="">
@@ -136,9 +137,9 @@
                             <h3 class="titulo">Mapeamento de Rotina</h3>
                         </div>
                         <p class="descricao">
-                            Nossa conversa inicial vai além da comida. Analisamos seus hábitos, horários, 
-                            treinos e preferências para entender exatamente como adaptar o plano alimentar à sua realidade, 
-                            e não o contrário.
+                            Nossa conversa inicial vai além da comida. <br>
+                            Analisamos seus hábitos, horários, treinos e preferências para entender sua rotina e adaptar o plano alimentar à sua realidade 
+                            — e não o contrário.
                         </p>
                     </div>
                     <img class="etapa-img" src="imagens/foto_etapa_1.png" alt="">
@@ -152,7 +153,7 @@
                         </div>
                         <p class="descricao">
                             Utilizamos adipometria e perimetria para mensurar sua massa muscular e percentual de gordura. 
-                            Esses dados guiam a estratégia para alcançarmos seus objetivos e resultados.
+                            Esses dados orientam toda a estratégia nutricional, garantindo decisões mais precisas para alcançar seus objetivos.
                         </p>
                     </div>
                     <img src="imagens/foto_etapa_2.png" alt="Avaliação física com adipômetro" class="etapa-img">
@@ -165,9 +166,9 @@
                             <h3 class="titulo">Plano Personalizado</h3>
                         </div>
                         <p class="descricao">
-                            Você recebe uma estratégia nutricional feita sob medida para o seu objetivo, 
-                            respeitando o que você gosta de comer e a logística do seu dia a dia. 
-                            Nada de dietas de gaveta.
+                            Seu plano alimentar é construído na hora, junto com você, alinhado 
+                            ao seu objetivo, ao que você gosta de comer e à logística do seu dia a dia. 
+                            Nada de dietas prontas ou engessadas.
                         </p>
                     </div>
                     <img src="imagens/foto_etapa_3.png" alt="Entrega do plano alimentar" class="etapa-img">
@@ -180,8 +181,8 @@
                             <h3 class="titulo">App e Suporte</h3>
                         </div>
                         <p class="descricao">
-                            Tenha seu plano e avaliação na palma da mão via aplicativo. Além disso, 
-                            você tem suporte direto para tirar dúvidas e realizar ajustes sempre que necessário.
+                            Tenha seu plano e avaliação na palma da mão, através do aplicativo. <br>
+                            Além disso, você conta com suporte direto para tirar dúvidas e realizar ajustes sempre que necessário.
                             <span style="font-weight: bold; font-size: 1.1rem;">
                                 Vamos trilhar esse caminho juntos!
                             </span>
