--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
             
             <div class="rodape-col">
                 <h3 class="rodape-logo">Arthur Aragão</h3>
-                <p class="crn">Nutricionista | CRN-6 00000</p>
+                <p class="crn" style="opacity: 0;">Nutricionista |CRN-6 00000</p>
                 <p class="rodape-desc">
                     Transformando vidas através da nutrição esportiva e clínica. 
                     Saúde, performance e bem-estar sem extremismos.
@@ -298,7 +298,7 @@
             <div class="rodape-col">
                 <h4>Contato</h4>
                 <ul class="rodape-contato">
-                    <li><i class="fa-brands fa-whatsapp"></i> (85) 9702-9871</li>
+                    <li><i class="fa-brands fa-whatsapp"></i> (85) 9.9702-9871</li>
                     <li><i class="fa-regular fa-envelope"></i> aragaonutri@gmail.com</li>
                     <li><i class="fa-solid fa-location-dot"></i> Fortaleza, CE</li>
                 </ul>
